--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -48,6 +48,13 @@
       </a>
     </li> <!-- .nav-item -->
     {% endfor %}
+    <!-- notes -->
+    <li class="nav-item">
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="nav-link" target="_blank">
+        <i class="fa-fw fas fa-note-sticky ml-xl-3 mr-xl-3 unloaded"></i>
+        <span>NOTES</span>
+      </a>
+    </li>
 
   </ul> <!-- ul.nav.flex-column -->
 
